# food-reco

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/: __init__.py  admin.py  data.py  feedback.py  health.py  plan.py
backend/app/auth/: __init__.py  routes.py  user_routes.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/crawler/: __init__.py  fetcher.py  normalizer.py  parser.py  robots.py  verifier.py
backend/app/llm/: __init__.py  client.py
backend/app/llm/prompts/: __init__.py
backend/app/models/: __init__.py  base.py  city.py  crawl.py  cuisine_type.py  food.py  health_condition.py  meal.py  prefs.py  rate_limit.py  tag_catalog.py  user.py  verification.py
backend/app/pricing/: __init__.py
backend/app/reco/: __init__.py  filter.py  learning.py  rules.py  scorer.py  weights.py
backend/data/: food_seed.sample.csv  price_tier_overrides.csv  provinces.csv
backend/migrations/: env.py
backend/migrations/versions/: 5fe558a3d5e3_initial_schema.py  642ee624fb5a_add_email_verification_token.py
backend/scripts/: add_conditions.py  create_user.py  dedup_foods.py  dedup_foods_v2.py  food_seed_data.py  food_seed_v2.py  food_seed_v3.py  seed_admin_tables.py
backend/tests/: conftest.py  test_reco.py  test_variety.py  test_verifier.py
data/: cities.sample.csv  food_seed.sample.csv  schema.sql
docs/: API.md  ARCHITECTURE.md  CONTEXT7_REFS.md  DATA_PIPELINE.md  KANBAN.md  RUNBOOK.md
(+30 files in other folders)
